# power_electronics_comm_validation

./: CMakeLists.txt  CMakePresets.json  README.md  stm32f401xe_flash.ld
Src/: startup_stm32f401xx.S
board_emu/: nucleo-f401re.resc
cmake/: vscode_generated.cmake
